--- a/.github/workflows/android-ci.yml
+++ b/.github/workflows/android-ci.yml
@@ -13,6 +13,7 @@ on:
   push:
     branches:
       - main
+      - develop
     paths-ignore:
       - README.md
       - LICENSE
@@ -50,9 +51,10 @@ jobs:
       - name: Checkout branch
         uses: actions/checkout@v2
       - name: Set JDK
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
-            java-version: 1.8
+            java-version: 11
+            distribution: 'adopt'
       # gradle cache thanks to https://github.com/actions/cache/blob/master/examples.md#java---gradle
       - name: Prepare gradle cache
         uses: actions/cache@v2
@@ -94,9 +96,10 @@ jobs:
       - name: Checkout branch
         uses: actions/checkout@v2
       - name: Set JDK
-        uses: actions/setup-java@v2
+        uses: actions/setup-java@v3
         with:
-            java-version: 1.8
+            java-version: '11'
+            distribution: 'adopt'
       # gradle cache thanks to https://github.com/actions/cache/blob/master/examples.md#java---gradle
       - name: Prepare gradle cache
         uses: actions/cache@v2
