--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,12 +44,13 @@ dependencies {
     def lifecycleVersion = "2.2.0"
     def materialVersion = "1.6.1"
     def retrofitVersion = "2.9.0"
-    def loggingInterceptorVersion = "4.5.0"
+    def okhttpVersion = "4.7.2"
     def picassoVersion = "2.8"
     def coroutinesVersion = "1.5.2"
     def junitVersion = "4.13.2"
     def junitExtVersion = "1.1.3"
     def espressoVersion = "3.4.0"
+    def mockkVersion = "1.12.4"
 
     implementation "androidx.appcompat:appcompat:$appCompatVersion"
     implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
@@ -58,11 +59,14 @@ dependencies {
     implementation "com.google.android.material:material:$materialVersion"
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
-    implementation "com.squareup.okhttp3:logging-interceptor:$loggingInterceptorVersion"
+    implementation "com.squareup.okhttp3:logging-interceptor:$okhttpVersion"
     implementation "com.squareup.picasso:picasso:$picassoVersion"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutinesVersion"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutinesVersion"
     testImplementation "junit:junit:$junitVersion"
+    testImplementation "io.mockk:mockk:$mockkVersion"
+    testImplementation "com.squareup.okhttp3:mockwebserver:$okhttpVersion"
     androidTestImplementation "androidx.test.ext:junit:$junitExtVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$espressoVersion"
+    androidTestImplementation "com.squareup.okhttp3:mockwebserver:$okhttpVersion"
 }
