--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,11 +51,13 @@ dependencies {
     def junitExtVersion = "1.1.3"
     def espressoVersion = "3.4.0"
     def mockkVersion = "1.12.4"
+    def browserVersion = "1.4.0"
 
     implementation "androidx.appcompat:appcompat:$appCompatVersion"
     implementation "androidx.constraintlayout:constraintlayout:$constraintLayoutVersion"
     implementation "androidx.core:core-ktx:$kotlinVersion"
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycleVersion"
+    implementation "androidx.browser:browser:$browserVersion"
     implementation "com.google.android.material:material:$materialVersion"
     implementation "com.squareup.retrofit2:retrofit:$retrofitVersion"
     implementation "com.squareup.retrofit2:converter-moshi:$retrofitVersion"
